@@ -50,6 +50,10 @@
                 <div class="ib-arrow-down-full"></div>
                 <div class="ib-arrow-left-full"></div>
                 <div class="ib-arrow-right-full"></div>
+                <div class="ib-arrow-left-full-line"></div>
+                <div class="ib-arrow-right-full-line"></div>
+                <div class="ib-arrow-up-full-line"></div>
+                <div class="ib-arrow-down-full-line"></div>
             </div>
         </div>
 
