@@ -19,6 +19,10 @@
 @import "scss/arrows/arrow-down-full";
 @import "scss/arrows/arrow-left-full";
 @import "scss/arrows/arrow-right-full";
+@import "scss/arrows/arrow-left-full-line";
+@import "scss/arrows/arrow-right-full-line";
+@import "scss/arrows/arrow-up-full-line";
+@import "scss/arrows/arrow-down-full-line";
 
 
 /*
