@@ -1,0 +1,22 @@
+@import "../_foundation/styles";
+
+.ib-arrow-down-full-line {
+    @include button;
+
+    &:before {
+        width: 0; 
+        height: 0; 
+        border-left: calc(#{$size} - #{$border-width * 2}) solid transparent;
+        border-right: calc(#{$size} - #{$border-width * 2}) solid transparent;
+        border-top: calc(#{$size} - #{$border-width * 2}) solid $dark-color;
+        bottom: 0;
+    }
+
+    &:after {
+        @include left-center;
+        width: calc(#{$size} - #{$border-width * 2});
+        height: calc(#{$size} - #{$border-width * 2});
+        background-color: $dark-color;
+        top: 0;
+    }
+}
